--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,26 @@
 .card {
     height: 100%;
 }
-.card img {
-    height: 400px;
+.poster {
+    position: relative;
+    width: 100%;
+    background-color: red;
+    border-radius: inherit;
+}
+.poster::after {
+    content: "";
+    display: block;
+    padding-top: calc(100% * 4 / 3);
+}
+.poster img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     object-fit: cover;
-    background-image: url(/fetch/assets/img/movies.svg);
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
 }
 
 .link-trailer {
